# cross-chain-resolver-example

./: .gitignore  .gitmodules  COMPREHENSIVE_TEST_SUMMARY.md  README.md  demo-cross-chain.js  demo-cross-chain.ts  foundry.toml  fusion-integration.ts  implementationplan.md  jest-results.json  jest.config.mjs  jest.setup.cjs  jest.setup.mjs  package-lock.json  package.json  remappings.txt  requirements.md  tsconfig.json
contracts/: DOCUMENTATION.md  foundry.toml  remappings.txt
contracts/script/: DeployNearBridge.s.sol
contracts/src/: FeeToken.sol  NearBridge.sol  Resolver.sol  TestEscrowFactory.sol
contracts/src/adapters/: FeeHandler.sol  (+1 more)
contracts/test/: BaseEscrow.t.sol  BaseEscrow.t.sol.backup  BaseEscrow.t.sol.bak  CrossChainCommunication.t.sol  ForkedNetworkIntegration.t.sol.disabled  MinimalTest.sol  NearBridge.Comprehensive.t.sol.backup  NearBridge.EdgeCases.t.sol  NearBridge.Integration.t.sol  NearBridge.Integration.t.sol.disabled  NearBridge.minimal.test.sol  NearBridge.t.sol  NearBridge.test.sol  NearBridge.test.sol.bak  RelayerIntegration.t.sol  Resolver.t.sol.backup  ResolverPartialFill.t.sol  TestEscrowFactory.t.sol  TestImport.sol  TokenAdapter.test.sol
docs/: PARTIAL_FILLS_IMPLEMENTATION.md  message-formats.md
near-solver/: .gitignore  Cargo.toml  Cargo.toml.backup  README.md  deploy.sh
near-solver/src/: event.rs  lib.rs  shade_agent.rs  tee_attestation.rs  test_utils.rs  utils.rs
near-solver/src/model/: mod.rs  order.rs  partial_fill_tests.rs
near-solver/src/service/: mod.rs  solver.rs
near-solver/src/tee/: attestation.rs  attestation_data.rs  errors.rs  mod.rs  registry.rs  registry_impl.rs  signature_verification_wasm.rs  storage.rs  tests.rs  types.rs
near-solver/src/tee/tests/: signature_verification.rs  signature_verification_tests.rs  test_utils.rs
near-solver/test-standalone/: Cargo.toml
near-solver/test-standalone/src/: escrow_contract.rs  lib.rs  order_model.rs  solver_service.rs  tee_attestation.rs  types.rs
near-solver/tests/: Cargo.toml  escrow_contract_test.rs  order_model_test.rs  security_controls_test.rs  signature_verification_test.rs  solver_service_test.rs  tee_attestation_test.rs  tee_integration_tests.rs  test_utils.rs
relayer/: .env.example  .env.optimized  .gitignore  CONFIGURATION_GUIDE.md  DOCUMENTATION.md  README.md  RELAYER_ARCHITECTURE.md  TASK_COMPLETION_SUMMARY.md  jest-results.json  jest.config.cjs  jest.config.js  jest.config.ts  jest.setup.ts  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
relayer/config/: config.development.json  config.production.json
relayer/scripts/: e2e-near-to-eth-runner.ts  test-cross-chain-flow.ts
relayer/src/: index.ts  server.ts  test-keypair.ts
relayer/storage/: ethereum_processed_messages.json
relayer/test/: near-relayer.test.ts
relayer/test-storage/: near_processed_messages.json
relayer/tests/: package.json  run-all-relayer-tests.ts  setup.cjs  setup.ts  test-config.js  test-config.ts  test-utils.ts
script/: Deploy.s.sol
scripts/: .env.example  BRIDGE_TESTING_REPORT.md  DOCUMENTATION.md  MANUAL_TESTING_GUIDE.md  README.md  RELAYER_BASED_TESTING.md  demo-config.json  deployment-report.json  package.json  relayer-config.json  run-partial-fill-tests.ts  run-testnet-demo.sh  test-partial-fills.ts  test-relayer-flow.js  testnet-config.json  tsconfig.json
scripts/reports/: demo-summary.md  executive-summary.md  hackathon-demo-report.json  hackathon-final-submission.json
scripts/src/: check-eth-withdrawals.ts  check-near-orders.ts  check-relayer-status.ts  cross-chain-demo.ts  debug-order-137-transaction.ts  debug-relayer-near.ts  demo-testnet.ts  deploy-near-bridge.ts  deploy-near-correct.ts  deploy-near-deploy-only.ts  deploy-near-final-working.ts  deploy-near-final.ts  deploy-near-simple.ts  deploy-near-testnet.ts  deploy-testnet.ts  enhanced-eth-to-near-transfer.ts  enhanced-monitor-relayer.ts  enhanced-test-near-to-eth-transfer.ts  hackathon-final-demo.ts  modern-near-to-eth-transfer.ts  monitor-relayer-backup.ts  monitor-relayer.ts  register-relayer.ts  test-cross-chain-transfer.ts  test-end-to-end-flow.ts  test-event-simulation.ts  test-existing-order.ts  test-near-deployment.ts  test-near-to-eth-transfer.ts  validate-near-eth-simple.ts  validate-near-to-eth-transfer.ts
scripts/tests/: enhanced-eth-to-near-transfer.test.ts  enhanced-monitor-relayer.test.ts  enhanced-test-near-to-eth-transfer.test.ts  run-all-tests.ts  simple-test.ts
src/fusion/: FusionCrossChainIntegration.ts  FusionOrderBuilder.ts
src/near-signatures/: NearChainSignatures.ts
src/order-management/: LocalOrderManager.ts
storage/: ethereum_processed_messages.json
storage/test-1754978638984/: ethereum_processed_messages.json
storage/test-1754978639010/: ethereum_processed_messages.json
test-storage/: near_processed_messages.json
tests/: near-integration.spec.ts  tee_integration_tests.rs
(+75 files in other folders)
