[package]
name = "near-solver"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "NEAR-side agent/solver for 1inch Fusion+ x NEAR cross-chain swaps"
license = "MIT"
repository = "https://github.com/your-username/cross-chain-resolver-example"

[features]
default = ["shade-agent/tee"]

[dependencies]
# NEAR dependencies
near-sdk = { version = "5.0.0", features = ["abi"] }
near-crypto = "0.15.0"
near-jsonrpc-client = { version = "0.10.0", features = ["http-client"] }
near-primitives = "0.15.0"

# Shade Agent Framework
shade-agent = { git = "https://github.com/shade-protocol/shade-agent-framework.git", branch = "main" }

# Cryptography
sha2 = "0.10.6"
sha3 = "0.10.6"
hex = "0.4.3"
base64 = "0.21.0"

# Async runtime
tokio = { version = "1.28.0", features = ["full"] }
async-trait = "0.1.68"

# Serialization
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"

# Error handling
thiserror = "1.0.40"
anyhow = "1.0.71"

# Logging
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

# Testing
rstest = { version = "0.17.0", features = ["async"] }
