[package]
name = "near-solver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NEAR SDK for smart contract development
near-sdk = { version = "5.6.0", features = ["legacy"] }

# Core dependencies
borsh = { version = "1.0.0", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"] }

# TEE verification
getrandom = { version = "0.2", features = ["js"] }
sgx-isa = { version = "0.12.0" }
serde_json = "1.0.96"
sha2 = "0.10.6"
sha3 = "0.10.6"
hex = "0.4.3"
base64 = "0.21.0"
thiserror = "1.0.40"
anyhow = "1.0.71"
async-trait = "0.1.68"

# Testing dependencies
[dev-dependencies]
near-sdk = { version = "5.6.0", features = ["unit-testing"] }
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4.2"
rstest = "0.17.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
