[package]
name = "near-solver"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = [
    "."  # Current package is the only workspace member
]

[dependencies]
# NEAR SDK for smart contract development
near-sdk = { version = "5.15.1", features = ["legacy"] }

# Core dependencies
borsh = { version = "1.0.0", features = ["derive"] }
serde = { version = "1.0.163", features = ["derive"] }
schemars = "0.8.12"  # JSON Schema generation for NEAR SDK

# TEE verification and cryptography
getrandom = { version = "0.2", features = ["js"] }
sgx-isa = { version = "0.4.1" }
serde_json = "1.0.96"
sha2 = "0.10.6"
sha3 = "0.10.6"
hex = "0.4.3"
base64 = "0.22.0"
thiserror = "1.0.40"
anyhow = "1.0.71"
async-trait = "0.1.68"

# WASM-compatible cryptographic libraries for signature verification
signature = "2.2.0"  # Trait-based signature verification
ecdsa = "0.16.9"     # ECDSA signature verification
p256 = "0.13.2"      # NIST P-256 elliptic curve
k256 = "0.13.3"      # secp256k1 elliptic curve
ed25519 = "2.2.3"    # Ed25519 signatures
ed25519-compact = "2.1.1"  # Compact Ed25519 implementation

# Testing dependencies
[dev-dependencies]
near-sdk = { version = "5.15.1", features = ["legacy", "unit-testing"] }
rand_core = { version = "0.6.4", features = ["std"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4.2"
rstest = "0.17.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true
