[package]
name = "near-phase2-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# Minimal dependencies for testing core logic
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"
sha3 = "0.10.6"
hex = "0.4.3"
base64 = "0.21.0"
thiserror = "1.0.40"
anyhow = "1.0.71"
tokio = { version = "1.28.0", features = ["full"] }
async-trait = "0.1.68"

[dev-dependencies]
tokio-test = "0.4.2"
