[package]
name = "near-solver-tests"
version = "0.1.0"
edition = "2021"

[lib]
path = "../src/lib.rs"

[dependencies]
near-sdk = { version = "5.0.0", features = ["test-utils"] }
near-solver = { path = ".." }  # Reference to the parent crate

[dev-dependencies]
assert_matches = "1.5.0"
hex = "0.4.3"
serde_json = "1.0"
